--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@
   margin: 0 auto 0;
 }
 
-.task,.task-label {
+.task,
+.task-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -49,11 +50,13 @@
   padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button{
   outline: none;
 }
 
@@ -72,7 +75,8 @@ input,button{
 }
 
 /* Heading */
-.title, .new-task-label {
+.title, 
+.new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
